add color varities

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -12,17 +12,47 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body class="bg-dark text-white">
     <div class="container mt-5">
       <form method="POST" action="/" enctype="multipart/form-data">
         <div class="mb-3">
           <label for="name" class="form-label">Shoe Name:</label>
           <input
             type="text"
-            class="form-control"
+            class="form-control bg-dark text-white"
             id="name"
             aria-describedby="shoe"
             name="name"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="desc" class="form-label">Description:</label>
+          <input
+            type="text"
+            class="form-control bg-dark text-white"
+            id="desc"
+            aria-describedby="shoe"
+            name="desc"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="price" class="form-label">Price:</label>
+          <input
+            type="text"
+            class="form-control bg-dark text-white"
+            id="price"
+            aria-describedby="shoe"
+            name="price"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="color" class="form-label">Color Varieties:</label>
+          <input
+            type="text"
+            class="form-control bg-dark text-white"
+            id="color"
+            aria-describedby="shoe"
+            name="color"
           />
         </div>
         <div class="mb-3">
