change price to product price

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -36,7 +36,7 @@
           />
         </div>
         <div class="mb-3">
-          <label for="price" class="form-label">Price:</label>
+          <label for="price" class="form-label">Product Price:</label>
           <input
             type="text"
             class="form-control bg-dark text-white"
