--- a/client/src/components/style/Contact.css
+++ b/client/src/components/style/Contact.css
@@ -1,72 +1,70 @@
-.Contact_container{
+.Contact_container {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  background-color: rgb(92, 210, 226);
-  height: calc(100vh - 45px);
-
+  justify-content: center;
 }
 
-
-.form{
-    display: flex;
-    flex-direction: column;
-    margin-top: 120px;
-    justify-self: center;
-    
-    padding: 30px;
-    margin-left: 150px;
-
+form {
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  width: 320px;
+  height: 375px;
+  padding: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  background: #2797aa;
+  box-shadow: 0 0 13px 3px rgba(0, 0, 0, 0.5);
+  overflow: hidden;
 }
 
-input[type='text']{
-     height: 20px;
-     width: 300px;
-     margin-top: 15px;
-     padding-left: 5px;
-     background-color: transparent;
-     border-top: 0;
-     border-left: 0;
-     border-right: 0;
-     border-bottom: 4px solid black;
-     outline: none;
-
+textarea {
+  width: 275px;
+  height: 110px;
+  border: 1px solid rgba(255, 255, 255, 0.6);
+  border-radius: 4px;
+  display: block;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 18px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 12px;
+  margin-bottom: 20px;
+  overflow: hidden;
 }
 
-textarea{
-    
-    width: 300px;
-    margin-top: 10px;
-    resize: none;
-    padding-left: 5px;
-    background-color: transparent;
-    border-top: 0;
-    border-left: 0;
-    border-right: 0;
-    border-bottom: 4px solid black;
-    outline: none;
+input {
+  width: 270px;
+  height: 48px;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  border-radius: 4px;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 18px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-bottom: 20px;
 }
 
-input[type='submit']{
-    height: 30px;
-    margin: auto;
-    width: 300px;
-    margin-top: 35px;
-    background-color: rgb(0, 0, 0);
-    color: aliceblue;
-
+input[type="submit"] {
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.6);
 }
 
-
-
-
-
-.text{
-    width: 500px;
-    margin-top: 120px;
-    margin-right:100px;
-    text-align: center;
-
+.contact_us {
+  margin-top: -15px;
+  font-style: italic;
+  text-decoration: underline #002e94;
 }
 
+@media (max-width: 440px) {
+  form {
+    width: 250px;
+  }
 
+  textarea {
+    width: 210px;
+  }
+
+  input {
+    width: 210px;
+  }
+}
