--- a/client/src/components/style/Footer.css
+++ b/client/src/components/style/Footer.css
@@ -1,5 +1,36 @@
-.Footer{
-    background-color: aquamarine;
-    width: 100%;
-    height: 50px;
+footer {
+  background-color: #002e94;
+  margin-top: 15px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  color: aliceblue;
+}
+
+.footer_para {
+  margin-top: -15px;
+  width: 370px;
+  align-self: center;
+}
+
+.footer_H1 {
+  color: aliceblue;
+}
+
+@media (max-width: 390px) {
+  .footer_para {
+    width: 270px;
+  }
+}
+
+.social_container {
+  margin-top: 10px;
+  margin-bottom: 15px;
+}
+
+.socials {
+  margin-left: 15px;
+  margin-right: 15px;
+  font-size: large;
+  margin-bottom: 15px;
 }
