--- a/client/src/components/style/Home.css
+++ b/client/src/components/style/Home.css
@@ -1,56 +1,23 @@
-
-
-.Home_img{
-     background-image: url(../../images/Home.jpg);
-     background-repeat: no-repeat;
-     background-size: cover;
-     height: calc(100vh - 40px);
-     display: flex;
-     flex-direction: column;
+.Card_Container {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: grid;
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-auto-rows: 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 13px 17px;
 }
 
-.Home_img > div {
-     text-align: center;
-     margin-top: 25px;
-    }
-    
-     
-.paragraph1{
-  margin-top: -15px;
+@media (max-width: 690px) {
+  .Card_Container {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
-
-.shop_now{
-    width: 150px;
-    border-radius: 20px;
-    height: 25px;
-    cursor: pointer;
-
-
-}
-
-.products{
-    display: grid;
-    gap: 10px;
-    grid-template-columns: repeat(3,1fr);
-    margin-top: 100px;
-   justify-self: center;
-   margin-bottom: 15px;
-}
-
-
-@media (max-width:950px) {
-    .products{
-        
-        grid-template-columns: repeat(2,1fr);
-        
-    }
-}
-
-@media (max-width:620px) {
-    .products{
-        
-        grid-template-columns: repeat(1,1fr);
-        
-    }
+@media (max-width: 470px) {
+  .Card_Container {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
