add admin functionality

--- a/server/views/add.ejs
+++ b/server/views/add.ejs
@@ -14,7 +14,7 @@
   </head>
   <body class="bg-dark text-white">
     <div class="container mt-5">
-      <form method="POST" action="/" enctype="multipart/form-data">
+      <form method="POST" action="/admin/add" enctype="multipart/form-data">
         <div class="mb-3">
           <label for="name" class="form-label">Shoe Name:</label>
           <input
