--- a/server/views/update.ejs
+++ b/server/views/update.ejs
@@ -16,7 +16,7 @@
     <div class="container mt-5">
       <form
         method="POST"
-        action="/update/<%= shoe._id %>"
+        action="/admin/update/<%= shoe._id %>"
         enctype="application/json"
       >
         <div class="mb-3">
