--- a/server/views/login.ejs
+++ b/server/views/login.ejs
@@ -7,9 +7,9 @@
     <title>Document</title>
   </head>
   <body>
-    <form action="/admin/login" method="post">
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="username" />
+    <form action="/users/login" method="post">
+      <label for="email">Email:</label>
+      <input type="text" id="email" name="email" />
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" />
       <button type="submit">Submit</button>
