--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -18,7 +18,7 @@
         <% shoes.forEach(el => { %>
         <div class="card col-3" style="width: 18rem">
           <div class="card-img">
-            <img src="<%= el.img %>" alt="" />
+            <img src="<%= el.img %>" style="width: 100%" alt="" />
           </div>
           <div class="card-body">
             <h5 class="card-title"><%= el.name %></h5>
